
* Release history

** main branch change

- fix aider--analyze-module function. It now accept a module directory provided by user, /read-only, and then analyze the module using the prompt.

- Add [Suggest Refactoring Strategy] menu item in the code refactoring tool
- refactor aider-agile.el, breakdown large methods to smaller ones
- Make TDD refactoring stage call aider-refactor-book-method, and tell it to pass all tests
- Add "subtree-only" command in aider-prompt-mode.el, when user send "subtree-only <dir>" with C-c C-n, it will start aider session at the given directory with --subtree-only
- fix doom keybinding in README.org

** v0.8.1

- aider--magit-generate-feature-branch-diff-file fetch remote branch firstly
- aider-send-line-or-region and aider-send-block-or-region keep focus in the aider prompt file after sending prompt to aider session, it is more smooth during using
- Improved AI assisted agile development and code reading. Introduced more methods from classic programming and code reading books

** v0.8.0

- Fix the installation command in README.org, provided by magthe.
- Introduce aider-legacy-code.el, it provides legacy code handling techniques based on Michael Feathers' "Working Effectively with Legacy Code" for the Aider package.
- Re-organize README to make it easier to read.
- Fix the bug in aider--analyze-program-structure, provided by EdmondFrank.
- remove +aider-code-change+ menu item, since It bypass code review. The code quality is not as good as /architect.

** v0.7.0

- ~aider-run-aider~ in dired, eshell, or shell buffer will ask if user wants to add `--subtree-only` flag
- Introduce AI assisted TDD, ~aider-tdd-cycle~, an experimental feature.
- Use gemini-exp in aider-popular-models, as well as README example, since it is still free at 2025-04-05
- Introduce AI assisted code reading functions, based on "Code Reading: The Open Source Perspective" by Diomidis Spinellis