@@ -60,17 +60,11 @@ Ignore lines starting with '>' (command prompts/input)."
   ;; 3) Reuse `markdown-mode`'s font-lock keywords for highlighting,
   ;;    but add a rule to prevent markdown highlighting on lines starting with '>'.
   (setq-local font-lock-defaults
-              (list (cons
-                     ;; Rule to apply default face to prompt lines, without overriding.
-                     ;; This aims to prevent subsequent markdown rules in this list
-                     ;; from applying, while still allowing comint-highlight-input.
-                     '("^>.*$" 0 'default nil)
-                     ;; Original markdown keywords
-                     markdown-mode-font-lock-keywords)
-                    nil ;; KEYWORDS-ONLY
-                    nil ;; CASE-FOLD
-                    nil ;; SYNTAX-ALIST
-                    nil)) ;; SYNTAX-BEGIN
+              '(markdown-mode-font-lock-keywords
+                nil nil nil nil
+                (font-lock-multiline . t)
+                (font-lock-extra-managed-props
+                 . (composition display invisible))))
   ;; 4) Enable fenced code block highlighting, and disable special font processing:
   (setq-local markdown-fontify-code-blocks-natively t)
   ;; https://github.com/tninja/aider.el/issues/113
@@ -89,7 +83,18 @@ Ignore lines starting with '>' (command prompts/input)."
   (font-lock-mode 1)
   ;; 7) Force immediate fontification of visible area:
   (font-lock-flush)
-  (font-lock-ensure))
+  (font-lock-ensure)
+  ;; 8) from https://github.com/MatthewZMD/aidermacs/pull/119/files
+  ;; Enable markdown mode highlighting
+  (add-hook 'syntax-propertize-extend-region-functions
+            #'markdown-syntax-propertize-extend-region nil t)
+  (add-hook 'jit-lock-after-change-extend-region-functions
+            #'markdown-font-lock-extend-region-function t t)
+  ;; a regex that will never match so we don't get the prompt interpreted as a block quote
+  (setq-local markdown-regex-blockquote "^\\_>$")
+  (if markdown-hide-markup
+      (add-to-invisibility-spec 'markdown-markup)
+    (remove-from-invisibility-spec 'markdown-markup)))
 
 (define-derived-mode aider-comint-mode comint-mode "Aider Session"
   "Major mode for interacting with Aider.
@@ -253,8 +258,8 @@ If current buffer is a dired, eshell, or shell buffer, ask if user wants to use 
       (with-current-buffer buffer-name
         (aider-comint-mode))
       (message "%s" (if current-args
-                       (format "Running aider from %s, with args: %s" default-directory (mapconcat #'identity current-args " "))
-                     (format "Running aider from %s with no args provided." default-directory))))
+                       (format "Running aider from %s, with args: %s.\nMay the AI force be with you!" default-directory (mapconcat #'identity current-args " "))
+                     (format "Running aider from %s with no args provided.\nMay the AI force be with you!" default-directory))))
     (aider-switch-to-buffer)))
 
 (defun aider-input-sender (proc string)
